objects/Account.object
<CustomObject>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccounts__c</fullName>
        <description>Total number of the client&apos;s financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c + FinServ__TotalNumberOfFinAccountsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Financial Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditJointOwner__c</fullName>
        <label>Total Outstanding Credit - Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditPrimaryOwner__c</fullName>
        <label>Total Outstanding Credit - Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCredit__c</fullName>
        <description>Value of client&apos;s total outstanding credit from the financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalOutstandingCreditPrimaryOwner__c + FinServ__TotalOutstandingCreditJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalPremium__c</fullName>
        <description>Total Premium field for Insurance</description>
        <label>Total Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__WalletShare__c</fullName>
        <formula>ROUND(((FinServ__TotalHeldFinAcctsPrimaryOwner__c + FinServ__TotalHeldFinAcctsJointOwner__c) / IF( (FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c)=0,1,(FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c))), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate (Admin)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Account_Characteristics__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Characteristics</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Account_Owner_Prev_Month_End__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DBSFCRM-122</description>
        <label>Account Owner - Prev Month End</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Account_Owner__c</fullName>
        <formula>Owner.FirstName +&apos; &apos;+ Owner.MiddleName +&apos; &apos;+ Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Account_Queue__c</fullName>
        <description>DBSFCRM-410</description>
        <label>Account Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BBT | Community Advantage Queue</fullName>
                </value>
                <value>
                    <fullName>BBT | Community Business Group Queue</fullName>
                </value>
                <value>
                    <fullName>BBT | MM | Team 1 Queue</fullName>
                </value>
                <value>
                    <fullName>BBT | MM Group Queue</fullName>
                </value>
                <value>
                    <fullName>BevBT | BB Group Queue</fullName>
                </value>
                <value>
                    <fullName>BevBT | MM Group Queue</fullName>
                </value>
                <value>
                    <fullName>BevBT | SB Group Queue</fullName>
                </value>
                <value>
                    <fullName>CLBT | Commercial Queue</fullName>
                </value>
                <value>
                    <fullName>HBT | BB Queue</fullName>
                </value>
                <value>
                    <fullName>HBT | MM Queue</fullName>
                </value>
                <value>
                    <fullName>HBT | SB Queue</fullName>
                </value>
                <value>
                    <fullName>LBT | BB Queue</fullName>
                </value>
                <value>
                    <fullName>LBT | SB Queue</fullName>
                </value>
                <value>
                    <fullName>LFBT | BB Group Queue</fullName>
                </value>
                <value>
                    <fullName>LFBT | MM Lake McHenry Queue</fullName>
                </value>
                <value>
                    <fullName>LFBT | SB Queue</fullName>
                </value>
                <value>
                    <fullName>NBT | BB Group Queue</fullName>
                </value>
                <value>
                    <fullName>NBT | MM Queue</fullName>
                </value>
                <value>
                    <fullName>NBT | SB Group Queue</fullName>
                </value>
                <value>
                    <fullName>OPTCB | BB Queue</fullName>
                </value>
                <value>
                    <fullName>OPTCB | MM Queue</fullName>
                </value>
                <value>
                    <fullName>OPTCB | SB Queue</fullName>
                </value>
                <value>
                    <fullName>SBOTL | MM Queue</fullName>
                </value>
                <value>
                    <fullName>SBOTL | SB Queue</fullName>
                </value>
                <value>
                    <fullName>SBT | BB | Team 1 Queue</fullName>
                </value>
                <value>
                    <fullName>SBT | BB Group Queue</fullName>
                </value>
                <value>
                    <fullName>SBT | MM Group Queue</fullName>
                </value>
                <value>
                    <fullName>SBT | Small Business Group Queue</fullName>
                </value>
                <value>
                    <fullName>SCBT | CB | Commercial Group Queue</fullName>
                </value>
                <value>
                    <fullName>SCBT | MM Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Account_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Accountant__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Accountant**</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Address_Flag__c</fullName>
        <label>WT Address Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address Standardized</fullName>
                </value>
                <value>
                    <fullName>Address Not Standardized</fullName>
                </value>
                <value>
                    <fullName>Address Cannot be Standardized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Age_To_Calculate_from_Birthdates__c</fullName>
        <description>This field is used to calculate the age of user so that minors could be eliminated from the Upcoming Birthdays Report.
According to the user story (SGE-132).</description>
        <formula>IF( NOT( ISBLANK(  PersonBirthdate  ) ) ,
  IF( DATE( 2000 , MONTH( PersonBirthdate ) , DAY( PersonBirthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( PersonBirthdate ),
     YEAR (Today()) - YEAR ( PersonBirthdate ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age To Calculate from Birthdates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_All_CRA_Areas__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>All CRA Areas</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Annual_Revenue_Banker_Entered__c</fullName>
        <label>Annual Revenue (Banker)**</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Annual_Revenue_DNB__c</fullName>
        <label>Annual Revenue (DNB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Annual_Revenue_InfoUSA__c</fullName>
        <label>Annual Revenue (InfoUSA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Annual_Revenue_Range__c</fullName>
        <label>Annual Revenue Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a. Under $200,000</fullName>
                </value>
                <value>
                    <fullName>b. $200,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>c. $500,000 - $999,999</fullName>
                </value>
                <value>
                    <fullName>d. $1.0 MM - $2.4 MM</fullName>
                </value>
                <value>
                    <fullName>e. $2.5 MM - $4.9 MM</fullName>
                </value>
                <value>
                    <fullName>f. $5.0 MM - $9.9 MM</fullName>
                </value>
                <value>
                    <fullName>g. $10.0 MM - $24.9 MM</fullName>
                </value>
                <value>
                    <fullName>h. $25.0 MM - $49.9 MM</fullName>
                </value>
                <value>
                    <fullName>i. $50.0 MM - $99.9 MM</fullName>
                </value>
                <value>
                    <fullName>j. $100.0 MM - $249.9 MM</fullName>
                </value>
                <value>
                    <fullName>k. $250.0 MM - $499.9 MM</fullName>
                </value>
                <value>
                    <fullName>l. $500.0 MM - $749.9 MM</fullName>
                </value>
                <value>
                    <fullName>m. $750.0 MM - $999.9 MM</fullName>
                </value>
                <value>
                    <fullName>n. $1,000 MM - $1,999 MM</fullName>
                </value>
                <value>
                    <fullName>o. $2,000 MM or above</fullName>
                </value>
                <value>
                    <fullName>p. Undefined/Other</fullName>
                </value>
                <value>
                    <fullName>q. N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Annual_Revenue_Ranked__c</fullName>
        <formula>IF(   WT_Annual_Revenue_Banker_Entered__c &gt; 0 ,WT_Annual_Revenue_Banker_Entered__c ,IF(  WT_Annual_Revenue_DNB__c&gt;0 ,WT_Annual_Revenue_DNB__c ,IF( WT_Annual_Revenue_InfoUSA__c &gt; 0,  WT_Annual_Revenue_InfoUSA__c , 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue (Ranked)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Balance_Total_Deposits__c</fullName>
        <label>$ Balance - Total Deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Bank_Officer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Officer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Bank_Officer_Number__c</fullName>
        <description>Created as a part of DBSFCRM-122</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Officer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Bank_Officer_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DBSFCRM-122</description>
        <label>Bank Officer User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Bill_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Branch__c</fullName>
        <description>Created as a part of DBSFCRM-122</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Business_Banking_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Banking Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_CD_Only_Household__c</fullName>
        <label>CD Only Household</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_CI_Board_Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_CI_Donation_CRA_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI Donation CRA Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_CI_Funded_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI Funded Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_CI_Funding_Amount__c</fullName>
        <label>CI Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_CI_Mission__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CI Mission</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CI_Seeks_Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI Seeks Board Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_CI_Volunteer_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI Volunteer Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Calls_Made_Last_Year__c</fullName>
        <label>Number of calls made last year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Calls_Made_This_Year__c</fullName>
        <label>Number of calls made this year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Census_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Census ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Census_Tract_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to find if the Account record&apos;s address is processed for Census tract. If it is checked then it is processed, if it is unchecked it is not processed. if the address is processed and the address is changed later then it is set to unchecked again to be picked up by the Census tract process.</description>
        <label>Census Tract Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Census_Tract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Census Tract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Charter_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Charter Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Charter__c</fullName>
        <description>Created as a part of DBSFCRM-122</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Charter #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Classification_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Classification Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Classification__c</fullName>
        <description>Created as part of DBSFCRM-649. This captures classification of account.</description>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                    <label>C = Customer</label>
                </value>
                <value>
                    <fullName>C1</fullName>
                    <label>C1 = Top Priority Customer</label>
                </value>
                <value>
                    <fullName>C2</fullName>
                    <label>C2 = Medium Priority Customer</label>
                </value>
                <value>
                    <fullName>C3</fullName>
                    <label>C3 = Established Customer</label>
                </value>
                <value>
                    <fullName>C4</fullName>
                    <label>C4 = Customer - PPP Onboarding</label>
                </value>
                <value>
                    <fullName>COI</fullName>
                    <label>COI = Center of Influence</label>
                </value>
                <value>
                    <fullName>NQ</fullName>
                    <label>NQ = Middle Market (Revenue $10MM to $260MM)</label>
                </value>
                <value>
                    <fullName>NQ0</fullName>
                    <label>NQ0 = Companies with Unknown Revenue</label>
                </value>
                <value>
                    <fullName>NQBB</fullName>
                    <label>NQBB = Companies with Revenue $1.00MM to $9.99MM</label>
                </value>
                <value>
                    <fullName>NQSB</fullName>
                    <label>NQSB = Companies with Revenue under $1MM</label>
                </value>
                <value>
                    <fullName>P1</fullName>
                    <label>P1 = Proposing within 6 months/Top Prospect</label>
                </value>
                <value>
                    <fullName>P2</fullName>
                    <label>P2 = Proposing in 6-12 months</label>
                </value>
                <value>
                    <fullName>P3</fullName>
                    <label>P3 = Proposing outside 12 months</label>
                </value>
                <value>
                    <fullName>P4</fullName>
                    <label>P4 = Other</label>
                </value>
                <value>
                    <fullName>P5</fullName>
                    <label>P5 = PPP Lead</label>
                </value>
                <value>
                    <fullName>X1</fullName>
                    <label>X1 = EdFAC</label>
                </value>
                <value>
                    <fullName>X2</fullName>
                    <label>X2 = Bankrupt/Out of Business</label>
                </value>
                <value>
                    <fullName>X3</fullName>
                    <label>X3 = Industry Excluded</label>
                </value>
                <value>
                    <fullName>X4</fullName>
                    <label>X4 = Subsidiary</label>
                </value>
                <value>
                    <fullName>X5</fullName>
                    <label>X5 = Potential Duplicate</label>
                </value>
                <value>
                    <fullName>X6</fullName>
                    <label>X6 = Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Closest_Bank_Branch__c</fullName>
        <formula>WT_Closest_Bank_Name__c + &apos; - &apos; +  WT_Closest_Branch_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closest Bank &amp; Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Closest_Bank_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closest Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Closest_Branch_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closest Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Coml_Banking_Services_List__c</fullName>
        <description>Created as a part of DBSFCRM-122</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Coml Banking Services List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Commercial_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Contact_Customer__c</fullName>
        <description>DBSFCRM-1023</description>
        <formula>IF( 
  OR(
     PersonDoNotCall,
     WT_Opt_Out_of_Info_Share__pc,
     FinServ__MarketingOptOut__pc,
     WT_Phone_Marketing__pc,
     WT_Mail_Marketing__pc,
     PersonHasOptedOutOfEmail
    ),
  IMAGE(&quot;/resource/1611727040000/ErrorIcon&quot;, &quot;red&quot;, 20, 20), 
  IMAGE(&quot;/resource/1611727239000/CorrectIcon&quot;, &quot;Green&quot;, 20, 20)
)</formula>
        <label>Contact Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_County_Code__c</fullName>
        <label>County Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Covered_Annual_Report__c</fullName>
        <label>Covered - Annual Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Covered_Annual__c</fullName>
        <label>Covered - Annual?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Covered_Last_Period_Report__c</fullName>
        <label>Covered - Last Period Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Covered_Last_Period__c</fullName>
        <label>Covered - Last Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Covered_Last_Year_Report__c</fullName>
        <label>Covered - Last Year Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Covered_Last_Year__c</fullName>
        <label>Covered - Last Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Covered_Period_Report__c</fullName>
        <label>Covered - Period Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Covered_Period__c</fullName>
        <label>Covered - Period?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Created_By_On__c</fullName>
        <formula>CreatedBy.FirstName+&quot; &quot;+CreatedBy.LastName+&quot; &quot;+TEXT(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By/On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_Area_Pop_Rank_Desc__c</fullName>
        <description>stores the population area size description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Address Area Pop Rank Desc</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_Area_Pop_Rank_Number__c</fullName>
        <description>DnB field for the population center rank</description>
        <label>DUNS Address Area Pop Rank Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_CBSA_Code__c</fullName>
        <description>CBSA code from DnB</description>
        <label>DUNS Address CBSA Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_CBSA_Name__c</fullName>
        <description>CBSA name from DnB</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Address CBSA Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_County_Name__c</fullName>
        <description>DnB County name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Address County Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_Economic_Area_Influence__c</fullName>
        <description>DnB Economic Area of Influence</description>
        <label>DUNS Address Economic Area Influence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_Latitude__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Address Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_Line1__c</fullName>
        <description>DnB Address Street</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WT DUNS Address Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DUNS_Address_Line2__c</fullName>
        <description>DnB field for line 2 of address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DUNS Address Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>